<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquincollege.wils0751.guessanumber.MainActivity">

    <TextView
        android:id="@+id/guessNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/guesspls"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/userGuess"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/guessBtn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/guess"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resetBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/result"
        android:textSize="25sp" />

    <Button
        android:id="@+id/guessBtn"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:onClick="onClick"
        android:text="@string/guessbtn"
        android:textSize="36sp" />

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="185dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/guessBtn"
        android:onClick="onClick"
        android:text="@string/resetbtn"
        android:textSize="36sp" />


    <ImageView
        android:id="@+id/userImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/dory"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="22dp"
        android:contentDescription=""
        app:srcCompat="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userImg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:text="@string/VS"
        android:textSize="60sp"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/dory"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/dory"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignEnd="@+id/userImg"
        android:layout_marginEnd="17dp"
        android:gravity="start"
        android:text="@string/You"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/dory"
        android:layout_marginStart="10dp"
        android:gravity="end"
        android:text="@string/Dory"
        android:textSize="36sp" />


</RelativeLayout>
